--- a/views/logbox.pug
+++ b/views/logbox.pug
@@ -97,7 +97,7 @@ html
               br
               span(class='code-form__code-text__pink') const 
               | domain = 
-              span(class='code-form__code-text__green') 'www.chatbro.com'
+              span(class='code-form__code-text__green') 'localhost'
               | ;
               br
               span(class='code-form__code-text__comment') //Секретный ключ, полученный на сайте
