--- a/views/main.pug
+++ b/views/main.pug
@@ -97,7 +97,7 @@ html
 						p(class='code-form__code-text')
 							span(class='code-form__code-text__pink') const 
 							| domain = 
-							span(class='code-form__code-text__green') 'www.chatbro.com'
+							span(class='code-form__code-text__green') 'localhost'
 							| ;
 							br
 							span(class='code-form__code-text__pink') const 
