added links to github

--- a/views/logbox.pug
+++ b/views/logbox.pug
@@ -87,7 +87,9 @@ html
       div(class='code')
         p(class='title') Как реализована эта страница на node.js
         div(class='code-form-for-title')
-          p(class='code-form-for-title__text-title') Отрывок из logbox.pug (ссылка на гит):
+          p(class='code-form-for-title__text-title') Отрывок из 
+            a(href='https://github.com/SviatoIa/ChatBroSSO/blob/86848685bf397f0247444131735886caac72875a/chatbro_test.js#L7-L46') chatbro_test.js
+            | :
           div(class='code-form')
             p(class='code-form__code-text')
               span(class='code-form__code-text__comment') //Объявляем переменные
@@ -218,7 +220,9 @@ html
               | );
               br
               | });
-          p(class='code-form-for-title__text-title') Отрывок из logbox.pug (ссылка на гит):
+          p(class='code-form-for-title__text-title') Отрывок из 
+            a(href='https://github.com/SviatoIa/ChatBroSSO/blob/86848685bf397f0247444131735886caac72875a/views/logbox.pug#L29-L36') logbox.pug
+            | :
           div(class='code-form')
             p(class='code-form__code-text')
               span(class='code-form__code-text__blue') ChatbroLoader
