--- a/views/main.pug
+++ b/views/main.pug
@@ -92,7 +92,9 @@ html
 				p(class='title') Как реализована эта страница на node.js
 				p(class='text') Сейчас вы гость. Попробуйте написать в чат и увидите предложение зайти через соц. сети или с временным именем. Но если вы заходили в аккаунт на chatbro.com, то будете отображаться под своим именем.
 				div(class='code-form-for-title')
-					p(class='code-form-for-title__text-title') Отрывок из index.js (ссылка на гит):
+					p(class='code-form-for-title__text-title') Отрывок из 
+						a(href='https://github.com/SviatoIa/ChatBroSSO/blob/86848685bf397f0247444131735886caac72875a/chatbro_test.js#L7-L31') chatbro_test.js
+						| :
 					div(class='code-form')
 						p(class='code-form__code-text')
 							span(class='code-form__code-text__pink') const 
@@ -141,7 +143,9 @@ html
 							br
 							| });
 				div(class='code-form-for-title')
-					p(class='code-form-for-title__text-title') Отрывок из main.pug (ссылка на гит):
+					p(class='code-form-for-title__text-title') Отрывок из 
+						a(href='https://github.com/SviatoIa/ChatBroSSO/blob/86848685bf397f0247444131735886caac72875a/views/main.pug#L30-L32') main.pug
+						| :
 					div(class='code-form')
 						p(class='code-form__code-text')
 							span(class='code-form__code-text__blue') ChatbroLoader
