--- a/views/logbox.pug
+++ b/views/logbox.pug
@@ -145,10 +145,23 @@ html
               br
               span(class='code-form__code-text__comment') //Рассчитаем хеш
               br
+              br
+              span(class='code-form__code-text__pink') let 
+              | permStr = permissions.
+              span(class='code-form__code-text__blue') toString
+              | ().
+              span(class='code-form__code-text__blue') replace
+              | (
+              span(class='code-form__code-text__green') ','
+              | , 
+              span(class='code-form__code-text__green') ''
+              | ); 
+              span(class='code-form__code-text__comment') //'ban' + 'delete' без запятой, порядок важен
+              br
               span(class='code-form__code-text__pink') let 
               | hash = crypto.createHash(
               span(class='code-form__code-text__green') 'md5'
-              | ).update(domain + userId + userName + urlAvatar + urlProfile + permissions + key).digest(
+              | ).update(domain + userId + userName + urlAvatar + urlProfile + permStr + key).digest(
               span(class='code-form__code-text__green') 'hex'
               | );
               br
