--- a/views/main.pug
+++ b/views/main.pug
@@ -58,15 +58,15 @@ html
 		
 	body(class='body')
 		div(class='header-bar')
-			a(class='header-bar__logo' href='/')
-				img(class='header-bar__logo__img' src='./images/favicon.png')
-				p(class='header-bar__logo__title') ChatBro
-			div(class='header-bar__link-list')
-				a(class='header-bar__link-list__form')
-					img(class='header-bar__link-list__form__img' src='./images/icons-guest.png')
-					p(class='header-bar__link-list__form__link') Гость
-					div(style='clear: both')
-			div(style='clear: both')
+			div(class='header-bar__basis')
+				a(class='header-bar__logo' href='/')
+					img(class='header-bar__logo__img' src='./images/favicon.png')
+					p(class='header-bar__logo__title') ChatBro
+				div(class='header-bar__link-list')
+					a(class='header-bar__link-list__form')
+						img(class='header-bar__link-list__form__img' src='./images/icons-guest.png')
+						p(class='header-bar__link-list__form__link') Гость
+						div(style='clear: both')
 		
 		div(class='block' style='box-shadow: 0 0; background-color: #e2e2e2')
 			div(class='block' style='width: 60%; float: left; margin: 0px; height: 410px')
