--- a/styles/header-bar/header-bar.css
+++ b/styles/header-bar/header-bar.css
@@ -3,4 +3,10 @@
 	box-shadow: 0 0 30px 2px black;
 	overflow: hidden;
 	width: 100%;
+	min-width: 1150px;
+}
+
+.header-bar__basis {
+	width: 1150px;
+	margin: 0px auto;
 }
