--- a/views/main.pug
+++ b/views/main.pug
@@ -60,7 +60,7 @@ html
 	body(class='body')
 		div(class='header-bar')
 			div(class='header-bar__basis')
-				a(class='header-bar__logo' href="?locale=en-US")
+				a(class='header-bar__logo' href="/")
 					img(class='header-bar__logo__img' src='./images/favicon.png')
 					p(class='header-bar__logo__title') ChatBro
 				div(class='header-bar__link-list')
