--- a/views/logbox.pug
+++ b/views/logbox.pug
@@ -63,7 +63,7 @@ html
   body
     div(class='header-bar')
       div(class='header-bar__basis')
-        a(class='header-bar__logo' href='/logbox')
+        a(class='header-bar__logo' href='/')
           img(class='header-bar__logo__img' src='./images/favicon.png')
           p(class='header-bar__logo__title') ChatBro
         div(class='header-bar__link-list')
