--- a/views/main.pug
+++ b/views/main.pug
@@ -27,7 +27,7 @@ html
 					btoa(unescape(encodeURIComponent(JSON.stringify(params)))),async),
 					xhr.send()
 			}
-			ChatbroLoader({encodedChatId: '6aNy',
+			ChatbroLoader({encodedChatId: '9czk',
 				siteDomain: '#{domain}',
 				signature: '#{hash}',
 				chatLanguage: '#{gettext("en")}'});
