--- a/views/profile.pug
+++ b/views/profile.pug
@@ -44,6 +44,6 @@ html
         div(class='profile-form__info')
           p(class='text') id: #{userId}
           p(class='text') #{gettext('Name')}: #{userName}
-          p(class='text') #{gettext('Permissions')}: #{permissionsStr}
+          p(class='text') #{gettext('Permissions')}: #{permStr}
         div(style='clear: both')
           
