--- a/views/profile.pug
+++ b/views/profile.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     
+    meta(name='viewport' content='width=device-width, initial-scale=0.8')
+    
     link(rel="shortcut icon" href="/images/favicon_small.png" type="image/png")
     
     link(rel='stylesheet' type='text/css' href='./styles/body/body.css')
@@ -38,7 +40,7 @@ html
           div(style='clear: both')
           
     div(class='block')
-      div(class='form' style='height: 327px')
+      div(class='form')
         div(class='profile-form__avatar')
           img(class='profile-form__avatar__img' src='./images/cat_avatar.jpeg')
         div(class='profile-form__info')
