--- a/public/styles/code-form/__code-text/code-form__code-text.css
+++ b/public/styles/code-form/__code-text/code-form__code-text.css
@@ -1,5 +1,6 @@
 .code-form__code-text {
-  padding: 10px;
+  padding: 0px 10px;
+  white-space: pre;
   line-height: 1.5;
   color: #393318;
   font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,sans-serif;
