--- a/public/styles/header-bar/__link-list/header-bar__link-list.css
+++ b/public/styles/header-bar/__link-list/header-bar__link-list.css
@@ -5,8 +5,6 @@
 	text-align: center;
 	text-decoration: none;
 	font-size: 19px;
-	overflow: hidden;
-  white-space: nowrap;
   text-align: center;
 }
 
@@ -41,4 +39,13 @@
 	padding-left: 15px;
 	margin: 0px;
 	float: right;
+	white-space: nowrap;
+	overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+@media (max-width: 650px) {
+	.header-bar__link-list__form__link {
+		max-width: 90px;
+	}
 }
