--- a/public/styles/registration-form/registration-form.css
+++ b/public/styles/registration-form/registration-form.css
@@ -1,6 +1,4 @@
 .registration-form {
-  width: 420px;
-  height: 220px;
   background-color: #dcf7f1;
   box-shadow: 0 0 8px rgba(122,122,122,0.5);
   padding: 0 30px;
@@ -24,13 +22,16 @@
   width: 100%;
   padding: 7px 0px;
   color: #5f6366;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .registration-form__input-button {
   width: 100%;
   height: 35px;
   border: 0px;
-  margin-top: 14px;
+  margin: 14px 0px;
   border-color: #c61801;
   background-color: #c61801;
   color: white;
